# dag-me-kindly

./: .gitignore  README.md  filesystem_pipeline.py  pyproject.toml
.claude/: settings.json
.dg/: telemetry.yaml
.dlt/: .toolkits  config.toml
.github/workflows/: dagster-plus-deploy.yml
.tmp_dagster_home_13vuteam/history/: runs.db
.tmp_dagster_home_13vuteam/history/runs/: .db  1b5a92ac-80c6-4db5-9d9d-b2342cadcde3.db  index.db
.tmp_dagster_home_13vuteam/schedules/: schedules.db
.tmp_dagster_home_13vuteam/storage/1b5a92ac-80c6-4db5-9d9d-b2342cadcde3/compute_logs/: rpsydpul.err  rpsydpul.out
jaffle_shop/: README.md  RELEASE.md  dbt_project.yml  profiles.yml
jaffle_shop/models/staging/dlp/: schema.yml  stg_dlp_dopinglp.sql  stg_dlp_lecivepripravky.sql  stg_dlp_organizace.sql  stg_dlp_slozeni.sql  stg_dlp_soli.sql  stg_dlp_synonyma.sql  stg_dlp_zruseneregistrace.sql
jaffle_shop/models/staging/dlp/base/: base_dlp_atc.sql  base_dlp_cesty.sql  base_dlp_doping.sql  base_dlp_dopinglp.sql  base_dlp_formy.sql  base_dlp_indikacniskupiny.sql  base_dlp_jednotky.sql  base_dlp_latky.sql  base_dlp_lecivelatky.sql  base_dlp_lecivepripravky.sql  base_dlp_narvla.sql  base_dlp_nazvydokumentu.sql  base_dlp_obaly.sql  base_dlp_organizace.sql  base_dlp_platnost.sql  base_dlp_pravnizakladreg.sql  base_dlp_regproc.sql  base_dlp_slozeni.sql  (+12 more)
jaffle_shop/models/staging/lek13/: base_lek13.sql  schema.yml  stg_lek13.sql
src/dag_me_kindly/defs/: analytics.py  import_csv.py  import_csv.txt  ingest_dim_dlp.py  ingest_lek13.py
src/dag_me_kindly/defs/jaffle_shop/: defs.yaml
