[project]
name = "dag_me_kindly"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.8",
    "dagster-cloud>=1.13.8",
    "dagster-dbt>=0.29.8",
    "dbt-duckdb>=1.10.1",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }
artifacts = [
    "src/dag_me_kindly/defs/.local_defs_state/",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dag_me_kindly"
registry_modules = [
    "dag_me_kindly.components.*",
]


